	 compat/morphos/{Makefile.am,osname.c},compat/unix/{Makefile.am,
	 osname.c},compat/win32/{Makefile.am,osname.c}: move OS name function
	 selection into configure.in.
20070804 compat.h,settings.pl,trdos.c,utils.c,compat/amiga/{Makefile.am,paths.c},
	 compat/morphos/Makefile.am,compat/unix/{Makefile.am,paths.c},
	 compat/win32/{Makefile.am,paths.c}: move pathname functions into
	 compatability directories.
20070804 configure.in: remove debug mode as its not used anywhere.
20070806 compat/unix/osname.c: ensure we have the prototype for strerror()
         (Fred).
20070806 tape.[ch],ula.c: enable beeper output for MIC bit (an attempt at
         feature request #1763114) (Fred).
20070806 keysyms.pl,ui/fb/{fbdisplay.c,fbjoystick.c,fbkeyboard.c,fbmouse.c,
	 fbui.c},ui/ggi/{ggi_internals.h,ggidisplay.c,ggikeyboard.c,ggiui.c},
	 ui/gtk/{binary.c,browse.c,confirm.c,debugger.c,fileselector.c,
	 gtkdisplay.c,gtkjoystick.c,gtkkeyboard.c,gtkmouse.c,gtkui.c,memory.c,
	 picture.c,roms.c,statusbar.c},ui/sdl/{sdldisplay.c,sdljoystick.c,
	 sdlkeyboard.c,sdlui.c},ui/svga/{svgadisplay.c,svgajoystick.c,
	 svgakeyboard.c,svgaui.c},ui/win32/{debugger.c,error.c,statusbar.c,
	 win32display.c,win32display.h,win32keyboard.c,win32ui.c},
	 ui/xlib/{xdisplay.c,xerror.c,xjoystick.c,xkeyboard.c,xui.c}:
	 remove unnecessary #ifdefs.
20070806 fuse.c: remove duplicated constant.
20070806 widget/{browse.c,debugger.c,error.c,filesel.c,menu.c,picture.c,
	 query.c,roms.c,select.c,text.c,widget.[ch]}: remove unnecessary
	 #ifdefs.
20070806 ui/gtk/fileselector.c: replace deprecated GtkFileSelection with
	 GtkFileChooserDialog. TODO: reimplement "current directory"
	 functionality.
20070807 Makefile.am,compat/win32/osname.c,configure.in: fix dependency on
	 libcompatos.a on non-Unix systems, fix MinGW build and fix compilation
	 of Win32 compat_osname() (Stuart).
20070810 ui/uijoystick.c,utils.h: fix compilation and remove redundant
	 prototypes (Stuart).
20070811 disk/plusd.c: various cleanups (Stuart).